{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 0,
  "lineage": "1321d7b7-cff6-52dc-a448-7b79bb5220cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "weblb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:internet-gateway/igw-082131af76a7d0175",
            "id": "igw-082131af76a7d0175",
            "owner_id": "123456789123",
            "tags": {
              "Name": "123456789123-acme-dev-igw"
            },
            "vpc_id": "vpc-0298053d746216f7f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-082131af76a7d0175",
            "id": "r-rtb-08411ab7d385c00a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08411ab7d385c00a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.web_rtb",
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:route-table/rtb-08411ab7d385c00a1",
            "id": "rtb-08411ab7d385c00a1",
            "owner_id": "123456789123",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "123456789123-acme-dev-rtb"
            },
            "vpc_id": "vpc-0298053d746216f7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:security-group/sg-0b55859d6c0d932a0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b55859d6c0d932a0",
            "ingress": [],
            "name": "123456789123-acme-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "123456789123",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "123456789123-acme-dev",
              "Name": "123456789123-acme-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0298053d746216f7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:security-group/sg-0dbca00ac30afe1e9",
            "description": "123456789123-acme-dev Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbca00ac30afe1e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "123456789123-acme-dev-sg",
            "name_prefix": "",
            "owner_id": "123456789123",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0298053d746216f7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-928930539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b55859d6c0d932a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3786380129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b55859d6c0d932a0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "aws_vpc.web_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:vpc/vpc-06274f27fbd6a66b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-083dc2b8ec05d2e41",
            "default_route_table_id": "rtb-02e6eeb7318e446d8",
            "default_security_group_id": "sg-0031b373a2aa530f7",
            "dhcp_options_id": "dopt-c77748a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06274f27fbd6a66b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02e6eeb7318e446d8",
            "owner_id": "123456789123",
            "tags": {
              "Name": "123456789123-acme-dev-eks-vpc"
            },
            "tags_all": {
              "Name": "123456789123-acme-dev-eks-vpc"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789123:vpc/vpc-0298053d746216f7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0325e69620cbb2437",
            "default_route_table_id": "rtb-0359f655b15cd95d7",
            "default_security_group_id": "sg-0c50d22dff25d48ec",
            "dhcp_options_id": "dopt-c77748a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0298053d746216f7f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0359f655b15cd95d7",
            "owner_id": "123456789123",
            "tags": {
              "Name": "123456789123-acme-dev-vpc"
            },
            "tags_all": {
              "Name": "123456789123-acme-dev-vpc"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ]
        }
      ]
    }
  ]
}